[APPREQ-363] fix: header breaks in Safari (Publish/Logout links split to next line)
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@5667 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/cms-gwt/src/com/freshdirect/cms/ui/public/cmsgwt.css
+++ b/projects/cms-gwt/src/com/freshdirect/cms/ui/public/cmsgwt.css
@@ -52,7 +52,6 @@
 }
 
 #buttonPanel div, #buttonPanel table {
-	width : 100%;	
 	height : 18px;
 }
 
